--- a/is/newsletter.lang
+++ b/is/newsletter.lang
@@ -62,7 +62,7 @@ Lestu allt um þetta í <span>fréttablaðinu</span> okkar
 
 
 ;Your newsletter subscription has been confirmed.
-Your newsletter subscription has been confirmed.
+Búið er að staðfesta áskriftina að fréttabréfinu.
 
 
 ;Format
@@ -106,10 +106,10 @@ Lestu um nýjustu hlutina fyrir Firefox á tölvu og farsíma áður en lokaútg
 
 
 ;Let’s Be Friends!
-Let’s Be Friends!
+Verum vinir!
 
 
 ;Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
-Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
+Firefox er einnig á félagsnetum. Kíktu á okkur og taktu þátt í samræðunum.
 
 
