Bug 735664 - [l10n: sv-SE] Update to newsletter.lang for www.mozilla.org.
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103045 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/sv-SE/newsletter.lang
+++ b/sv-SE/newsletter.lang
@@ -62,7 +62,7 @@ Läs om allt i vårt <span>nyhetsbrev</span>
 
 
 ;Your newsletter subscription has been confirmed.
-Your newsletter subscription has been confirmed.
+Din nyhetsbrevsprenumeration har bekräftats.
 
 
 ;Format
@@ -70,46 +70,46 @@ Format {ok}
 
 
 ;You’re All Set! <span>But Wait, There’s More</span>
-You’re All Set! <span>But Wait, There’s More</span>
+Nu är allting klart! <span>Men vänta, det finns mer</span>!
 
 
 ;Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
-Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
+Vill du få den information som är mest relevant för dig? Berätta lite mer om dig själv. Och när du ändå är här, registrera dig för fler Mozilla-nyheter.
 
 
 ;Firefox & You
-Firefox & You
+Firefox & du
 
 
 ;Our Other Newsletters:
-Our Other Newsletters:
+Våra övriga nyhetsbrev:
 
 
 ;Get the latest tips and tricks for getting the most out of your favorite browser.
-Get the latest tips and tricks for getting the most out of your favorite browser.
+Få de senaste tipsen och råden om hur du får ut så mycket som möjligt ur din favoritwebbläsare.
 
 
 ;Firefox Mobile
-Firefox Mobile
+Firefox Mobil
 
 
 ;Learn about the hottest new add-ons and features for Firefox mobile.
-Learn about the hottest new add-ons and features for Firefox mobile.
+Läs mer om de hetaste nya tilläggen och funktionerna för Firefox mobilwebbläsare.
 
 
 ;Beta News
-Beta News
+Beta-nyheter
 
 
 ;Read about the latest features for Firefox desktop and mobile before the final release.
-Read about the latest features for Firefox desktop and mobile before the final release.
+Läs om de senaste funktionerna i Firefox skrivbords- och mobilversioner innan de slutgiltiga versionerna släpps.
 
 
 ;Let’s Be Friends!
-Let’s Be Friends!
+Låt oss vara vänner!
 
 
 ;Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
-Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
+Firefox finns också på dina favoritwebbplatser för sociala nätverk. Anslut dig och delta i samtalet.
 
 
