--- a/hu/newsletter.lang
+++ b/hu/newsletter.lang
@@ -58,35 +58,34 @@ Elküldtük e-mailben a visszaigazoló üzenetet. Kattintson a levélben találh
 
 
 ;Read all about it in our <span>newsletter</span>
-Olvasson minderről a <span>hírlevelünkben</span>
+Olvasson erről a <span>hírlevelünkben</span>
 
 
 ;Your newsletter subscription has been confirmed.
-Your newsletter subscription has been confirmed.
-
+A hírlevél-előfizetés jóváhagyása megtörtént.
 
 ;Format
 Formátum
 
 
 ;You’re All Set! <span>But Wait, There’s More</span>
-You’re All Set! <span>But Wait, There’s More</span>
+Minden készen áll! <span>De várjunk, van itt még valami</span>
 
 
 ;Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
-Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
+Szeretne további információt kapni? Mondjon magáról egy kicsivel többet és addig is, iratkozzon fel további Mozilla hírlevelekre.
 
 
 ;Firefox & You
-Firefox & You
+Firefox és én
 
 
 ;Our Other Newsletters:
-Our Other Newsletters:
+További hírleveleim:
 
 
 ;Get the latest tips and tricks for getting the most out of your favorite browser.
-Get the latest tips and tricks for getting the most out of your favorite browser.
+Ismerje meg a legújabb tippeket és trükköket és hozza ki a legtöbbet a kedvenc böngészőjéből.
 
 
 ;Firefox Mobile
@@ -94,22 +93,20 @@ Firefox Mobile
 
 
 ;Learn about the hottest new add-ons and features for Firefox mobile.
-Learn about the hottest new add-ons and features for Firefox mobile.
+Ismerje meg a Firefox mobil legújabb kiegészítőit és funkcióit.
 
 
 ;Beta News
-Beta News
+Beta hírek
 
 
 ;Read about the latest features for Firefox desktop and mobile before the final release.
-Read about the latest features for Firefox desktop and mobile before the final release.
+Olvasson a Firefox legújabb funkcióiról még a megjelenés előtt.
 
 
 ;Let’s Be Friends!
-Let’s Be Friends!
+Legyünk barátok!
 
 
 ;Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
-Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
-
-
+A Firefox megtalálható a legtöbb közösségi oldalon. Csatlakozzon hozzánk.
