--- a/el/newsletter.lang
+++ b/el/newsletter.lang
@@ -62,7 +62,7 @@
 
 
 ;Your newsletter subscription has been confirmed.
-Your newsletter subscription has been confirmed.
+Η συνδρομή σας επιβεβαιώθηκε.
 
 
 ;Format
@@ -106,10 +106,10 @@ Firefox για κινητά
 
 
 ;Let’s Be Friends!
-Let’s Be Friends!
+Ας γίνουμε φίλοι!
 
 
 ;Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
-Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
+Η ομάδα του Firefox βρίσκεται και στα αγαπημένα σας κοινωνικά δίκτυα. Συνδεθείτε μαζί μας και συμμετέχετε στις συζητήσεις.
 
 
