--- a/da/newsletter.lang
+++ b/da/newsletter.lang
@@ -22,11 +22,11 @@ Vælg land
 
 
 ;Whoops! Be sure to enter a valid email address.
-Ups! Kontroller at du har indtastet en gyldig mailadresse.
+Ups! Kontrollér, at du har indtastet en gyldig mailadresse.
 
 
 ;Please read the Mozilla Privacy Policy and agree by checking the box.
-Læs Mozillas privatlivspolitik og accepter den ved at krydse af i boksen.
+Læs Mozillas privatlivspolitik, og acceptér den ved at sætte flueben i boksen.
 
 
 ;I agree to the <a href="%s">Privacy Policy</a>
@@ -46,7 +46,7 @@ Tak for din tilmelding!
 
 
 ;We look forward to soon begin sharing tips &amp; tricks on getting the most out of Firefox, as well as exciting news about Mozilla and how we’re working to create a better Web.
-Vi ser frem til snarest at dele tips og tricks om hvordan du får mest muligt ud af Firefox, samt spændende nyheder om Mozilla og hvordan vi arbejder på at skabe et bedre web.
+Vi ser frem til snarest at dele tips og tricks om, hvordan du får mest muligt ud af Firefox, samt spændende nyheder om Mozilla, og hvordan vi arbejder på at skabe et bedre web.
 
 
 ;Subscribe to monthly updates and keep current with Mozilla news, including the latest tips and tricks for getting the most out of your Firefox browser. It’s the perfect way for us to keep in touch!
@@ -54,15 +54,15 @@ Modtag månedlige opdateringer, og hold dig ajour med Mozilla-nyheder, herunder 
 
 
 ;We just sent you a confirmation message by email. Click on the confirmation link in this email to validate your subscription to this mailing list.
-Vi har lige sendt dig en bekræftelse via mail. Klik på linket i denne mail for at bekræfte din tilmelding til mailinglisten.
+Vi har lige sendt dig en bekræftelse via mail. Klik på linket i mailen for at bekræfte din tilmelding til mailinglisten.
 
 
 ;Read all about it in our <span>newsletter</span>
-Læs det hele i vores <span>nyhedsbrev</span>
+Læs mere i vores <span>nyhedsbrev</span>
 
 
 ;Your newsletter subscription has been confirmed.
-Your newsletter subscription has been confirmed.
+Dit abonnementet på nyhedsbrevet er blevet bekræftet.
 
 
 ;Format
@@ -70,23 +70,23 @@ Format {ok}
 
 
 ;You’re All Set! <span>But Wait, There’s More</span>
-You’re All Set! <span>But Wait, There’s More</span>
+Du er klar! <span>Men vent, der er mere</span>
 
 
 ;Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
-Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
+Vil du have de mest relevante informationer? Fortæl os lidt mere om dig selv. Og mens du er her, tilmeld dig andre Mozilla-nyheder.
 
 
 ;Firefox & You
-Firefox & You
+Firefox & dig
 
 
 ;Our Other Newsletters:
-Our Other Newsletters:
+Vores andre nyhedsbreve:
 
 
 ;Get the latest tips and tricks for getting the most out of your favorite browser.
-Get the latest tips and tricks for getting the most out of your favorite browser.
+Få de nyeste tips og tricks om, hvordan du får mest ud af din yndlings-browser.
 
 
 ;Firefox Mobile
@@ -94,22 +94,21 @@ Firefox Mobile
 
 
 ;Learn about the hottest new add-ons and features for Firefox mobile.
-Learn about the hottest new add-ons and features for Firefox mobile.
+Læs om de hotteste nye tilføjelser og funktioner til Mobilen.
 
 
 ;Beta News
-Beta News
+Beta-nyheder
 
 
 ;Read about the latest features for Firefox desktop and mobile before the final release.
-Read about the latest features for Firefox desktop and mobile before the final release.
+Læs om de nyeste funktioner i Firefox og Mobilen inden den endelige udgivelse.
 
 
 ;Let’s Be Friends!
-Let’s Be Friends!
+Lad os være venner!
 
 
 ;Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
-Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
-
+Firefox er også på dine foretrukne sociale netværkssteder. Slut dig til os og deltag i samtalen.
 
