[l10n: gl] updated newsletter.lang file for www.mozilla.org
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103081 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/gl/newsletter.lang
+++ b/gl/newsletter.lang
@@ -109,7 +109,7 @@ Lea sobre as últimas características para o Firefox do escritorio e o móbil a
 Sexamos amigos!
 
 
-;Firefox is also on your favorite social networking sites. Connect with us and join the conversation
-Firefox tamén está nas súas redes sociais favoritas. Conecte connosco e únase a conversación
+;Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
+Firefox tamén está nas súas redes sociais favoritas. Conecte connosco e únase a conversación.
 
 
