Localized missing string
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103082 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/da/newsletter.lang
+++ b/da/newsletter.lang
@@ -90,7 +90,7 @@ Få de nyeste tips og tricks om, hvordan du får mest ud af din yndlings-browser
 
 
 ;Firefox Mobile
-Firefox Mobile
+Mobilen
 
 
 ;Learn about the hottest new add-ons and features for Firefox mobile.
