Updated translation of newsletter.lang
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103097 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/hr/newsletter.lang
+++ b/hr/newsletter.lang
@@ -62,7 +62,7 @@ Saznajte više u našem <span>newsletteru</span>
 
 
 ;Your newsletter subscription has been confirmed.
-Your newsletter subscription has been confirmed.
+Vaša pretplata na newsletter je potvrđena.
 
 
 ;Format
@@ -70,23 +70,23 @@ Format {ok}
 
 
 ;You’re All Set! <span>But Wait, There’s More</span>
-You’re All Set! <span>But Wait, There’s More</span>
+Spremi ste! <span>Ali čekajte, ima još nešto</span>
 
 
 ;Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
-Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
+Želite li izvući najviše iz relevantnih informacija? Recite nam nešto o sebi i dok ste tamo, pretplatite se na ostale Mozilline novosti.
 
 
 ;Firefox & You
-Firefox & You
+Firefox i vi
 
 
 ;Our Other Newsletters:
-Our Other Newsletters:
+Naši ostali newsletteri:
 
 
 ;Get the latest tips and tricks for getting the most out of your favorite browser.
-Get the latest tips and tricks for getting the most out of your favorite browser.
+Saznajte najnovije savjete i trikove za dobivanje maksimuma iz vašeg omiljenog web preglednika.
 
 
 ;Firefox Mobile
@@ -94,22 +94,22 @@ Firefox Mobile
 
 
 ;Learn about the hottest new add-ons and features for Firefox mobile.
-Learn about the hottest new add-ons and features for Firefox mobile.
+Saznajte više o najpopularnijim dodacima i mogućnostima za Firefox mobile.
 
 
 ;Beta News
-Beta News
+Beta novosti
 
 
 ;Read about the latest features for Firefox desktop and mobile before the final release.
-Read about the latest features for Firefox desktop and mobile before the final release.
+Pročitajte o najnovijim mogućnostima u Firefoxu za desktop i mobitele, prije nego što stignu u finalno izdanje.
 
 
 ;Let’s Be Friends!
-Let’s Be Friends!
+Budimo prijatelji!
 
 
 ;Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
-Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
+Firefox je prisutan i na vašim omiljenim društvenim mrežama. Povežite se s nama i pridružite se raspravama.
 
 
