l10n:lij language fix
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103139 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/lij/download.lang
+++ b/lij/download.lang
@@ -3,7 +3,7 @@ Mozilla Firefox, o navegatô de bàdda, o l'é creòu da 'na asociaçión sénsa
 
 
 ;Different by Design
-Divèrso da Progétto
+Divèrso into cheu
 
 
 ;Proudly <span>non-profit</span>
@@ -15,7 +15,7 @@ Inovatîvo <span>pe ti</span>
 
 
 ;Fast, flexible, <span>secure</span>
-Velôce, fléscibile, <span>segûo</span>
+Velôce, flescìbile, <span>segûo</span>
 
 
 ;Thanks for choosing Firefox!
