--- a/lij/snippets.lang
+++ b/lij/snippets.lang
@@ -34,7 +34,7 @@ Firefox o l'é orgogiozaménte non-profit e de bàdda pe inovâse a teu vantàgg
 
 
 ;Fast, flexible and secure, Firefox is the only browser that puts you first. <a href="%s">Learn more</a> about what makes us different by design.
-Velôce, fléscibile e segûo, Firefox o l'é o sôlo navegatô ch'o métte ti ao prìmmo pòsto. <a href="%s">Pe savéine de ciù</a> in sce cösa do nòstro progétto ne rénde divèrsi.
+Velôce, flescìbile e segûo, Firefox o l'é o sôlo navegatô ch'o métte ti ao prìmmo pòsto. <a href="%s">Pe savéine de ciù</a> in sce cösa do nòstro progétto ne rénde divèrsi.
 
 
 ;<a href="%s">Download Firefox on your Android tablet</a> and put the power of the Web right in your hands. Get it now.
