l10n:lij language fix
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103140 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/lij/main.lang
+++ b/lij/main.lang
@@ -163,7 +163,7 @@ O Firefox o l'é agiornòu, ma a teu versción do Flash Player peu avéi di prob
 
 
 ;Features
-Carateristìche
+Caraterìstiche
 
 
 ;Customize
@@ -191,7 +191,7 @@ Scégli o teu pàize
 
 
 ;Download Firefox directly from your phone
-Descàrega Firefox da-o teu teléfono
+Descàrega Firefox da-o teu telefonìn
 
 
 ;Download
