l10n:lij language fix
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103148 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/lij/main.lang
+++ b/lij/main.lang
@@ -370,7 +370,7 @@ Mozilla Firefox. Pòrta a modernitæ in sciô XP.
 
 
 ;Super speed
-'Na velocitæ che te fâ xoâ vîa o capéllo
+Velocitæ che te fâ xoâ vîa o capéllo
 
 
 ;Stunning graphics
