l10n:lij language fix
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103149 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/lij/main.lang
+++ b/lij/main.lang
@@ -314,7 +314,7 @@ Prêuva ancheu a ræ de domàn.
 
 
 ;Check out the new look and feel of Firefox.
-Vànni in pö a védde mâi béllo ch'o lé o nêuvo stîle de Firefox.
+Vànni in pö a védde mâi béllo ch'o l'é o nêuvo stîle de Firefox.
 
 
 ;Browse the future of the Web.
