Added new German strings for newsletter.lang
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103155 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/de/newsletter.lang
+++ b/de/newsletter.lang
@@ -112,4 +112,26 @@ Lass’ uns Freunde sein!
 ;Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
 Firefox ist auch auf Ihren sozialen Lieblingsnetzwerken. Setzen Sie sich mit uns in Verbindung und diskutieren Sie mit.
 
+;Manage your <span>Newsletter Subscriptions
+Verwalten Sie Ihre <span>Newsletter-Abonnements
+
+
+;Subscribe
+Abonnieren
+
+
+;Unsubscribe
+Abonnement entfernen
+
+
+;Check here if you’d like to be removed from all Mozilla emails'
+Aktivieren Sie dieses Kontrollkästchen, um Sie aus allen Mozilla-E-Mail-Listen auszutragen
+
+
+;Remove me from all Mozilla emails
+Trage mich aus allen Mozilla-E-Mail-Listen aus
+
+
+;Save Preferences
+Einstellungen speichern
 
