--- a/da/download.lang
+++ b/da/download.lang
@@ -3,7 +3,7 @@ Den gratis webbrowser Mozilla Firefox er skabt af en global non-profit-organisat
 
 
 ;Different by Design
-Grundliggende anderledes
+Grundlæggende anderledes
 
 
 ;Proudly <span>non-profit</span>
