--- a/da/snippets.lang
+++ b/da/snippets.lang
@@ -34,7 +34,7 @@ Mozilla er stolt af at være en non-profit-organisation - det giver os frihed ti
 
 
 ;Fast, flexible and secure, Firefox is the only browser that puts you first. <a href="%s">Learn more</a> about what makes us different by design.
-Hurtig, fleksibel og sikker, Firefox er den eneste browser, der sætter dig i forreste række. <a href="%s">Læs mere</a> om, hvad der gør os grundliggende anderledes.
+Hurtig, fleksibel og sikker, Firefox er den eneste browser, der sætter dig i forreste række. <a href="%s">Læs mere</a> om, hvad der gør os grundlæggende anderledes.
 
 
 ;<a href="%s">Download Firefox on your Android tablet</a> and put the power of the Web right in your hands. Get it now.
