newsletter.lang sl update - smo
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103165 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/sl/newsletter.lang
+++ b/sl/newsletter.lang
@@ -18,11 +18,11 @@ Jeziki na razpolago
 
 
 ;Select country
-Država
+Izberite državo
 
 
 ;Whoops! Be sure to enter a valid email address.
-Opsala! Prepričajte se, ali je poštni naslov pravilen.
+Opsala! Prepričajte se, da je poštni naslov pravilen.
 
 
 ;Please read the Mozilla Privacy Policy and agree by checking the box.
@@ -38,7 +38,7 @@ Prijavi me!
 
 
 ;We will only send you Mozilla-related information.
-Pošiljali vam bomo le vsebine, ki se tičejo Mozille.
+Pošiljali vam bomo samo informacije, ki se tičejo Mozille.
 
 
 ;Thanks for Subscribing!
@@ -58,11 +58,11 @@ Pravkar smo vam po elektronski pošti poslali potrditveno sporočilo. Kliknite n
 
 
 ;Read all about it in our <span>newsletter</span>
-Vse to in še več v naših <span>novicah</span>
+Vse to in še več v našem <span>biltenu</span>
 
 
 ;Your newsletter subscription has been confirmed.
-Your newsletter subscription has been confirmed.
+Vaša prijava na bilten je potrjena.
 
 
 ;Format
@@ -70,23 +70,25 @@ Format {ok}
 
 
 ;You’re All Set! <span>But Wait, There’s More</span>
-You’re All Set! <span>But Wait, There’s More</span>
+Urejeno! <span>Ampak trenutek, to še ni vse</span>
 
 
 ;Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
-Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
+Želite dobivati najbolj pomembne informacije? Povej nam malo več o sebi. In ko ste tukaj, se prijavite še na druge novice Mozille.
+
+
 
 
 ;Firefox & You
-Firefox & You
+Firefox in vi
 
 
 ;Our Other Newsletters:
-Our Other Newsletters:
+Naši drugi bilteni:
 
 
 ;Get the latest tips and tricks for getting the most out of your favorite browser.
-Get the latest tips and tricks for getting the most out of your favorite browser.
+Preberite si najnovejše nasvete in trike, da dobite kar največ iz vašega najljubšega brskalnika.
 
 
 ;Firefox Mobile
@@ -94,22 +96,37 @@ Firefox Mobile
 
 
 ;Learn about the hottest new add-ons and features for Firefox mobile.
-Learn about the hottest new add-ons and features for Firefox mobile.
+Spoznajte se z najbolj vročimi novimi dodatki in funkcijami v Firefoxu za mobilnike.
 
 
 ;Beta News
-Beta News
+Beta bilten
 
 
 ;Read about the latest features for Firefox desktop and mobile before the final release.
-Read about the latest features for Firefox desktop and mobile before the final release.
-
+Preberite si že pred končno objavo vse o najnovejših funkcijah v Firefox za namizne računalnike in za mobilnike.
 
 ;Let’s Be Friends!
-Let’s Be Friends!
+Postanimo prijatelji!
 
 
 ;Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
-Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
+Firefox je tudi eno od vaših priljubljenih družabnih spletnih mest. Pridružite se nam pri klepetu.
 
+;Manage your <span>Newsletter Subscriptions
+Urejajte svoje <span>naročnine na biltene
 
+;Subscribe
+Prijava za naročnino
+
+;Unsubscribe
+Odjava naročnine
+
+;Check here if you’d like to be removed from all Mozilla emails
+Odkljukajte, če se želite odjaviti od vseh poštnih naročnin pri Mozilli
+
+;Remove me from all Mozilla emails
+Odjavi me od vseh naročnin pri Mozilli
+
+;Save Preferences
+Shrani nastavitve
