Strings added and localized
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103171 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/da/newsletter.lang
+++ b/da/newsletter.lang
@@ -112,3 +112,26 @@ Lad os være venner!
 ;Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
 Firefox er også på dine foretrukne sociale netværkssteder. Slut dig til os og deltag i samtalen.
 
+
+;Manage your <span>Newsletter Subscriptions
+Administrer dine <span>abonnementer på nyhedsbreve
+
+
+;Subscribe
+Abonner
+
+
+;Unsubscribe
+Afmeld abonnement
+
+
+;Check here if you’d like to be removed from all Mozilla emails'
+Sæt flueben her, hvis du vil afmeldes alle Mozillas mails
+
+
+;Remove me from all Mozilla emails
+Afmeld mig alle Mozillas mails
+
+
+;Save Preferences
+Gem præferencer
