--- a/eo/newsletter.lang
+++ b/eo/newsletter.lang
@@ -112,4 +112,25 @@ Ni amikiĝu!
 ;Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
 Firefox troveblas ankaŭ en viaj plej ŝatataj sociaj retejoj.  Kontaktu nin kaj aliĝu al la babilado.
 
+;Manage your <span>Newsletter Subscriptions
+Administri viajn <span>abonojn al novaĵleteroj
 
+
+;Subscribe
+Aboni
+
+
+;Unsubscribe
+Malaboni
+
+
+;Check here if you’d like to be removed from all Mozilla emails'
+Marku tie ĉi se vi ŝatus ne plu ricevi retmesaĝojn de Mozilla
+
+
+;Remove me from all Mozilla emails
+Forigi min el la retmesaĝoj de Mozilla
+
+
+;Save Preferences
+Konservi preferojn
