Update .lang snippets
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103176 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/zh-TW/newsletter.lang
+++ b/zh-TW/newsletter.lang
@@ -62,7 +62,7 @@
 
 
 ;Your newsletter subscription has been confirmed.
-Your newsletter subscription has been confirmed.
+已確認您的電子報訂閱。
 
 
 ;Format
@@ -70,46 +70,63 @@ Your newsletter subscription has been confirmed.
 
 
 ;You’re All Set! <span>But Wait, There’s More</span>
-You’re All Set! <span>But Wait, There’s More</span>
+這樣就完成了！<span>等等，還有一件事</span>
 
 
 ;Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
-Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
+想要取得與您更相關的資訊嗎？請給我們一些關於您的資料。我們也歡迎您訂閱其他的 Mozilla 新聞電子報。
 
 
 ;Firefox & You
-Firefox & You
+Firefox & You {ok}
 
 
 ;Our Other Newsletters:
-Our Other Newsletters:
+我們其他的電子報:
 
 
 ;Get the latest tips and tricks for getting the most out of your favorite browser.
-Get the latest tips and tricks for getting the most out of your favorite browser.
+取得關於如何能完整發揮您最愛瀏覽器的功力的資訊，以及使用小技巧。
 
 
 ;Firefox Mobile
-Firefox Mobile
+Firefox 行動版
 
 
 ;Learn about the hottest new add-ons and features for Firefox mobile.
-Learn about the hottest new add-ons and features for Firefox mobile.
+了解 Firefox 行動版上有什麼最新功能與附加元件。
 
 
 ;Beta News
-Beta News
+Beta 新聞
 
 
 ;Read about the latest features for Firefox desktop and mobile before the final release.
-Read about the latest features for Firefox desktop and mobile before the final release.
+在正式版釋出前搶先了解 Firefox 桌面版及行動版有什麼最新功能。
 
 
 ;Let’s Be Friends!
-Let’s Be Friends!
+讓我們當好朋友！
 
 
 ;Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
-Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
+Firefox 也在您最愛的社群網站出沒，跟我們一起聊聊吧。
 
+;Manage your <span>Newsletter Subscriptions
+管理您所 <span>訂閱的電子報
+
+;Subscribe
+訂閱
+
+;Unsubscribe
+退訂
+
+;Check here if you’d like to be removed from all Mozilla emails'
+若您不想再收到任何 Mozilla 的電子郵件，請點這裡
+
+;Remove me from all Mozilla emails
+我不要再收到任何來自 Mozilla 的電子郵件
+
+;Save Preferences
+儲存偏好設定
 
