Bug 736557 - [l10n: sv-SE] Added and translated missing strings in newsletter.lang for www.mozilla.org
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103177 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/sv-SE/newsletter.lang
+++ b/sv-SE/newsletter.lang
@@ -113,3 +113,25 @@ Låt oss vara vänner!
 Firefox finns också på dina favoritwebbplatser för sociala nätverk. Anslut dig och delta i samtalet.
 
 
+;Manage your <span>Newsletter Subscriptions
+Hantera dina <span>nyhetsbrevsprenumerationer
+
+
+;Subscribe
+Prenumerera
+
+
+;Unsubscribe
+Avsluta prenumeration
+
+
+;Check here if you’d like to be removed from all Mozilla emails'
+Kryssa i den här rutan om du vill tas bort från alla Mozillas e-postlistor
+
+
+;Remove me from all Mozilla emails
+Ta bort mig från alla Mozillas e-brev
+
+
+;Save Preferences
+Spara inställningarna
