--- a/ru/newsletter.lang
+++ b/ru/newsletter.lang
@@ -62,7 +62,7 @@
 
 
 ;Your newsletter subscription has been confirmed.
-Your newsletter subscription has been confirmed.
+Ваша подписка на новостную рассылку была подтверждена.
 
 
 ;Format
@@ -70,46 +70,68 @@ Your newsletter subscription has been confirmed.
 
 
 ;You’re All Set! <span>But Wait, There’s More</span>
-You’re All Set! <span>But Wait, There’s More</span>
+У вас всё настроено! <span>Но погодите, у нас есть больше</span>
 
 
 ;Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
-Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
+Хотите получать наиболее полезную информацию? Расскажите нам немного о себе. И, пока вы здесь, подпишитесь на другие новости о Mozilla.
 
 
 ;Firefox & You
-Firefox & You
+Firefox и Вы
 
 
 ;Our Other Newsletters:
-Our Other Newsletters:
+Наши другие новостные рассылки:
 
 
 ;Get the latest tips and tricks for getting the most out of your favorite browser.
-Get the latest tips and tricks for getting the most out of your favorite browser.
+Получайте новейшие полезные советы и приёмы, позволяющие использовать ваш любимый браузер по максимуму.
 
 
 ;Firefox Mobile
-Firefox Mobile
+Мобильный Firefox
 
 
 ;Learn about the hottest new add-ons and features for Firefox mobile.
-Learn about the hottest new add-ons and features for Firefox mobile.
+Узнавайте о самых горячих новинках и популярных дополнениях для мобильного Firefox.
 
 
 ;Beta News
-Beta News
+Новости о бета-версии
 
 
 ;Read about the latest features for Firefox desktop and mobile before the final release.
-Read about the latest features for Firefox desktop and mobile before the final release.
+Читайте о новейших возможностях настольного и мобильного Firefox перед тем, как они попадут в финальную версию.
 
 
 ;Let’s Be Friends!
-Let’s Be Friends!
+Давайте станем друзьями!
 
 
 ;Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
-Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
+Firefox также можно найти в ваших любимых социальных сетях. Свяжитесь с нами и присоединяйтесь к дискуссиям.
 
+;Manage your <span>Newsletter Subscriptions
+Управление вашими <span>подписками на новости
+
+
+;Subscribe
+Подписаться
+
+
+;Unsubscribe
+Отписаться
+
+
+;Check here if you’d like to be removed from all Mozilla emails'
+Щёлкните здесь, если вы хотите отписаться от всех рассылок Mozilla
+
+
+;Remove me from all Mozilla emails
+Отписать меня от всех рассылок Mozilla
+
+
+;Save Preferences
+Сохранить настройки
 
