--- a/hr/newsletter.lang
+++ b/hr/newsletter.lang
@@ -90,7 +90,7 @@ Saznajte najnovije savjete i trikove za dobivanje maksimuma iz vašeg omiljenog 
 
 
 ;Firefox Mobile
-Firefox Mobile
+Firefox Mobile {ok}
 
 
 ;Learn about the hottest new add-ons and features for Firefox mobile.
