--- a/hr/newsletter.lang
+++ b/hr/newsletter.lang
@@ -112,4 +112,25 @@ Budimo prijatelji!
 ;Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
 Firefox je prisutan i na vašim omiljenim društvenim mrežama. Povežite se s nama i pridružite se raspravama.
 
+;Manage your <span>Newsletter Subscriptions
+Upravljajte svojim <span>newsletter pretplatama
 
+
+;Subscribe
+Pretplata
+
+
+;Unsubscribe
+Odjava
+
+
+;Check here if you’d like to be removed from all Mozilla emails'
+Označite ako više ne želite primati Mozillinu e-poštu
+
+
+;Remove me from all Mozilla emails
+Ukloni me sa svih popisa primatelja e-pošte
+
+
+;Save Preferences
+Spremi postavke
