--- a/is/newsletter.lang
+++ b/is/newsletter.lang
@@ -113,3 +113,25 @@ Verum vinir!
 Firefox er einnig á félagsnetum. Kíktu á okkur og taktu þátt í samræðunum.
 
 
+;Manage your <span>Newsletter Subscriptions
+Sýsla með <span>áskrift að fréttabréfum
+
+
+;Subscribe
+Gerast áskrifandi
+
+
+;Unsubscribe
+Hætta í áskrift
+
+
+;Check here if you’d like to be removed from all Mozilla emails'
+Hakaðu hér við ef þú vilt ekki fá neinn póst frá Mozilla
+
+
+;Remove me from all Mozilla emails
+Fjarlægja mig úr öllum pósti frá Mozilla
+
+
+;Save Preferences
+Vista stillingar
