l10n: bn-IN, new firefox beta page , translation by Runa
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103207 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/bn-IN/firefoxtesting.lang
+++ b/bn-IN/firefoxtesting.lang
@@ -2,58 +2,58 @@
 
 
 ;Download Firefox Beta for Android - Free
-Download Firefox Beta for Android - Free
+Android-র সাথে ব্যবহারযোগ্য Firefox বিটা সংস্করণ ডাউনলোড করুন - বিনামূল্যে
 
 
 ;Download Firefox Beta for Desktop - Free
-Download Firefox Beta for Desktop - Free
+ডেস্কটপে ব্যবহারযোগ্য Firefox বিটা সংস্করণ ডাউনলোড করুন - বিনামূল্যে
 
 
 ;Download and test Firefox future releases. Experience the newest innovations with the Aurora or Beta builds.
-Download and test Firefox future releases. Experience the newest innovations with the Aurora or Beta builds.
+Firefox-র পরবর্তী সংস্করণগুলি ডাউনলোড করে পরীক্ষা করুন। অরোরা অথবা বিটা সংস্করণগুলির মাধ্যমে নতুন বৈশিষ্ট্যগুলি সম্পর্কে অবগত হন।
 
 
 ;Firefox Beta
-Firefox Beta
+Firefox বিটা
 
 
 ;Firefox Beta for:
-Firefox Beta for:
+চিহ্নিত উৎপাদনের Firefox বিটা:
 
 
 ;Firefox Beta for Mobile
-Firefox Beta for Mobile
+মোবাইলের ব্যবহারযোগ্য Firefox বিটা সংস্করণ:
 
 
 ;Download Beta and be part of the next version of Firefox.
-Download Beta and be part of the next version of Firefox.
+বিটা সংস্করণ ডাউনলোড করুন ও  Firefox-র পরবর্তী সংস্করণ প্রস্তুতিতে যোগদান করুন।
 
 
 ;1. Test Features
-1. Test Features
+১) বৈশিষ্ট্য পরীক্ষা করুন
 
 
 ;Try out the latest performance, customization and security enhancements almost ready for prime time.
-Try out the latest performance, customization and security enhancements almost ready for prime time.
+মূল প্রকাশনার জন্য প্রায় সমাপ্ত কর্মক্ষমতা, স্বনির্ধারণ ও নিরাপত্তা বিষয়ক উন্নত বৈশিষ্ট্যগুলি পরীক্ষা করুন।
 
 
 ;2. Refine &amp; Polish
-2. Refine &amp; Polish
+২) পরিশ্রুতি ও পরিশীলন
 
 
 ;File bugs to help us put the final tweaks on performance and functionality in a stable environment.
-File bugs to help us put the final tweaks on performance and functionality in a stable environment.
+স্থায়ী কর্মক্ষেত্রের মধ্যে ব্যবহারযোগ্য কর্মক্ষমতা ও বৈশিষ্ট্যগুলি সম্পূর্ণ করতে, বাগ দাখিল করে আমাদের সাহায্য করুন।
 
 
 ;3. Do Your Part
-3. Do Your Part
+৩)  অংশগ্রহণ করুন
 
 
 ;Have an impact on the next version of Firefox and the 450 million people who use it every day.
-Have an impact on the next version of Firefox and the 450 million people who use it every day.
+Firefox-র পরবর্তী সংস্করণের প্রস্তুতিতে ও এর দৈনিক ৪৫ কোটি ব্যবহারকারীদের সাহায্য করুন।
 
 
 ;Supported devices
-Supported devices
+সমর্থিত ডিভাইসের তালিকা
 
 
