--- a/ast/newsletter.lang
+++ b/ast/newsletter.lang
@@ -1,4 +1,4 @@
-# These strings are used for subscription forms in pages footers, as well as on http://www-dev.allizom.org/newsletter and http://www-dev.allizom.org/es-ES/newsletter/new
+# These strings are used for subscription forms in pages footers, as well as on http://www-dev.allizom.org/newsletter and http://www-dev.allizom.org/ast/newsletter/new
 
 
 ;Get Monthly News
@@ -62,7 +62,7 @@ Acabamos d'unviate un mensaxe de confirmación per corréu. Fai click nel enllaz
 
 
 ;Your newsletter subscription has been confirmed.
-Your newsletter subscription has been confirmed.
+Confirmóse la to soscripción al nuesu boletín.
 
 
 ;Format
@@ -70,46 +70,44 @@ Formatu
 
 
 ;You’re All Set! <span>But Wait, There’s More</span>
-You’re All Set! <span>But Wait, There’s More</span>
+Too llisto! <span>Pero espera, entá hai más</span>
 
 
 ;Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
-Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
+Quies tener más información? Cuéntanos coses tocante a ti. Y mentanto teas equí, soscríbite a otres noticies de Mozilla.
 
 
 ;Firefox & You
-Firefox & You
+Firefox & Tu
 
 
 ;Our Other Newsletters:
-Our Other Newsletters:
+Otros boletines:
 
 
 ;Get the latest tips and tricks for getting the most out of your favorite browser.
-Get the latest tips and tricks for getting the most out of your favorite browser.
+Obtén conseyos y trucos pa sacar el máximu provechu al to restolador web favoritu.
 
 
 ;Firefox Mobile
-Firefox Mobile
+Firefox Mobile {ok}
 
 
 ;Learn about the hottest new add-ons and features for Firefox mobile.
-Learn about the hottest new add-ons and features for Firefox mobile.
+Conoz los caberos complementos y carauterístiques pa Firefox mobile.
 
 
 ;Beta News
-Beta News
+Noticies tocante a la Beta
 
 
 ;Read about the latest features for Firefox desktop and mobile before the final release.
-Read about the latest features for Firefox desktop and mobile before the final release.
+Llei tocante a les caberes funcionalidaes pa Firefox desktop y mobile enantes del llanzamientu final.
 
 
 ;Let’s Be Friends!
-Let’s Be Friends!
+Faite collaciu nuestru!
 
 
 ;Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
-Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
-
-
+Firefox tamién ta nes tos redes sociales favorites. Coneuta con nós y xúnite a la conversación.
