updating ast translations in snippets.lang
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103224 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/ast/snippets.lang
+++ b/ast/snippets.lang
@@ -82,38 +82,36 @@ Descarga Firefox na to tableta Android y pon tol poder de la Web nes tos manes. 
 
 
 ;<a href="%">Download Firefox Beta</a>, provide feedback and help make the next Firefox even more awesome for our 450 million users.
-<a href="%">Download Firefox Beta</a>, provide feedback and help make the next Firefox even more awesome for our 450 million users.
+<a href="%">Descarga Firefox Beta</a>, danos les tos opiniones y suxerencies, y fai que'l próximu Firefox seya más ablucante pa los nuesos 450 millones d'usuarios.
 
 
 ;Test features, refine and polish them and help us make our next version better than ever. <a href="%">Download Firefox Beta today!</a>
-Test features, refine and polish them and help us make our next version better than ever. <a href="%">Download Firefox Beta today!</a>
+Prueba carauterístiques, defíneles y perfeiciónales; y échanos un gabitu pa que la próxima versión entá seya meyor . <a href="%">¡Descarga Firefox Beta!</a>
 
 
 ;Love Firefox? Want to help make our next version even better? <a href="%">Download Firefox Beta</a> and give us feedback today!
-Love Firefox? Want to help make our next version even better? <a href="%">Download Firefox Beta</a> and give us feedback today!
+¿Préstate Firefox? ¿Quies facer que la nueva versión seya entá meyor? ¡<a href="%">Descarga Firefox Beta</a> y danos les tos opiniones y suxerencies!
 
 
 ;Are you running the latest Firefox Beta? <a href="%">Get it now</a> and help us test the latest features.
-Are you running the latest Firefox Beta? <a href="%">Get it now</a> and help us test the latest features.
+¿Tienes instaláu el caberu Firefox Beta? <a href="%">Descárgalu agora</a> y ayúdanos a probar les caberes carauterístiques.
 
 
 ;Not on the latest Firefox Beta? <a href="%">Get it today</a> to stay on top of what we're working on for our next version.
-Not on the latest Firefox Beta? <a href="%">Get it today</a> to stay on top of what we're working on for our next version.
+¿Qu'entá nun tienes la cabera versión de Firefox Beta? <a href="%">Faite agora con ella</a> y caltente informáu diariamente de les innovaciones nes que trabayamos pa la nueva versión.
 
 
 ;Want to share your feedback? <a href="%">Find out how</a> and help make the next version of Firefox even more awesome.
-Want to share your feedback? <a href="%">Find out how</a> and help make the next version of Firefox even more awesome.
+¿Quies compartir les tos opiniones y suxerencies? <a href="%">Deprendi cómo</a> y fai que la próxima versión seya entá más ablucante.
 
 
 ;Firefox Beta users: Don't forget to <a href="%">provide feedback</a> to help us put the final tweaks on our next version.
-Firefox Beta users: Don't forget to <a href="%">provide feedback</a> to help us put the final tweaks on our next version.
+Usuarios de Firefox Beta: nun vos escaezáis de <a href="%">dar les vueses opiniones y suxerencies</a> que nos ayudarán a facer los caberos axustes de la próxima versión.
 
 
 ;Help make the next version of Firefox even more awesome. <a href="%">Become an Affiliate</a> and share Firefox Beta with your friends.
-Help make the next version of Firefox even more awesome. <a href="%">Become an Affiliate</a> and share Firefox Beta with your friends.
+Fai que la próxima versión de Firefox seya inclusu más ablucante. <a href="%">Conviértite en simpatizante</a> y comparte Firefox Beta colos tos collacios.
 
 
 ;Invite friends to preview upcoming Firefox features. <a href="%">Become an Affiliate</a> and share Firefox Aurora today.
-Invite friends to preview upcoming Firefox features. <a href="%">Become an Affiliate</a> and share Firefox Aurora today.
-
-
+Invita a los tos collacios a que vean les carauterístique que va tener Firefox nel futuru. <a href="%">Conviértite en simpatizante</a> y comparte Firefox Aurora güei mesmo.
