[ES] newsletter.lang file updated.
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103239 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/es-ES/newsletter.lang
+++ b/es-ES/newsletter.lang
@@ -34,11 +34,11 @@ Acepto la <a href="%s">política de privacidad</a>
 
 
 ;Sign me up!
-¡Suscríbeme!
+¡Suscribirme!
 
 
 ;We will only send you Mozilla-related information.
-Sólo te enviaremos información relacionada con Mozilla.
+Solo te enviaremos información relacionada con Mozilla.
 
 
 ;Thanks for Subscribing!
@@ -46,7 +46,7 @@ Sólo te enviaremos información relacionada con Mozilla.
 
 
 ;We look forward to soon begin sharing tips &amp; tricks on getting the most out of Firefox, as well as exciting news about Mozilla and how we’re working to create a better Web.
-Estamos deseando empezar a compartir contigo consejos y trucos sobre cómo sacar el máximo partido de Firefox, las noticias más increíbles sobre Mozilla y todo el trabajo que hacemos para crear una web mejor.
+Estamos deseando comenzar a compartir contigo trucos y consejos sobre cómo sacar el máximo partido de Firefox, las noticias más increíbles sobre Mozilla y todo el trabajo que hacemos para crear una web mejor.
 
 
 ;Subscribe to monthly updates and keep current with Mozilla news, including the latest tips and tricks for getting the most out of your Firefox browser. It’s the perfect way for us to keep in touch!
@@ -62,7 +62,7 @@ Te enviamos un mensaje de confirmación por correo. Haz clic en el enlace de con
 
 
 ;Your newsletter subscription has been confirmed.
-Your newsletter subscription has been confirmed.
+Tu suscripción al boletín ha sido confirmada.
 
 
 ;Format
@@ -70,23 +70,23 @@ Formato
 
 
 ;You’re All Set! <span>But Wait, There’s More</span>
-You’re All Set! <span>But Wait, There’s More</span>
+¡Ya estás listo! <span>Pero espera, hay mucho más</span>
 
 
 ;Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
-Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
+¿Deseas recibir la info más relevante? Cuéntanos un poco más de ti. Y ya que estás, suscríbete a otras noticias de Mozilla.
 
 
 ;Firefox & You
-Firefox & You
+Firefox y Tú
 
 
 ;Our Other Newsletters:
-Our Other Newsletters:
+Otros boletines nuestros:
 
 
 ;Get the latest tips and tricks for getting the most out of your favorite browser.
-Get the latest tips and tricks for getting the most out of your favorite browser.
+Recibe los últimos trucos y consejos sobre cómo sacar el máximo partido a tu navegador favorito.
 
 
 ;Firefox Mobile
@@ -94,22 +94,22 @@ Firefox Mobile
 
 
 ;Learn about the hottest new add-ons and features for Firefox mobile.
-Learn about the hottest new add-ons and features for Firefox mobile.
+Conoce los nuevos complementos y características más populares en Firefox para dispositivos móviles.
 
 
 ;Beta News
-Beta News
+Noticias Beta
 
 
 ;Read about the latest features for Firefox desktop and mobile before the final release.
-Read about the latest features for Firefox desktop and mobile before the final release.
+Lee todo acerca de las últimas características en Firefox para escritorio y dispositivos móviles antes de que se publique la versión final.
 
 
 ;Let’s Be Friends!
-Let’s Be Friends!
+¡Seamos amigos!
 
 
 ;Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
-Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
+Firefox está también en tus redes sociales favoritas. Conecta con nosotros y únete a la conversación.
 
 
